make all course to no slide

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "course-starter",
+    "name": "international-relations-study-guide",
     "private": true,
     "description": "International Relations study guide",
     "version": "0.0.1",
